concat dfs(unfinished)

--- a/main.ipynb
+++ b/main.ipynb
@@ -29,12 +29,11 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
-    "from zipfile import ZipFile\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from glob import glob\n",
+    "import time\n",
     "import zipfile\n",
-    "import codecs"
+    "from glob import glob\n",
+    "\n",
+    "import pandas as pd"
    ],
    "metadata": {
     "collapsed": false,
@@ -59,29 +58,6 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "['dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_01.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_02.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_03.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_04.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_05.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_06.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_07.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_08.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_09.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_10.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_11.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\codz_2016_12.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2016\\\\zjaw_2016.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2017\\\\codz_2017_01.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2017\\\\codz_2017_02.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2017\\\\codz_2017_03.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2017\\\\codz_2017_04.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2017\\\\codz_2017_05.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2017\\\\codz_2017_06.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2017\\\\codz_2017_07.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2017\\\\codz_2017_08.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2017\\\\codz_2017_09.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2017\\\\codz_2017_10.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2017\\\\codz_2017_11.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2017\\\\codz_2017_12.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2017\\\\zjaw_2017.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2018\\\\codz_2018_01.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2018\\\\codz_2018_02.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2018\\\\codz_2018_03.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2018\\\\codz_2018_04.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2018\\\\codz_2018_05.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2018\\\\codz_2018_06.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2018\\\\codz_2018_07.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2018\\\\codz_2018_08.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2018\\\\codz_2018_09.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2018\\\\codz_2018_10.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2018\\\\codz_2018_11.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2018\\\\codz_2018_12.zip',\n 'dane.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_hydrologiczne/dobowe\\\\2018\\\\zjaw_2018.zip']"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zip_files"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "## Ekstrakcja z archiwów .zip\n",
@@ -96,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def unpack(files: list) -> list:\n",
@@ -107,7 +83,8 @@
     "    #csv files - new list\n",
     "    csv_files = glob(f'{data_dir}/*/*.csv')\n",
     "\n",
-    "    return sorted(csv_files)"
+    "    return sorted(csv_files)\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -130,27 +107,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "outputs": [
     {
-     "data": {
-      "text/plain": "           Nazwa stacji Nazwa rzeki/jeziora  Rok hydrologiczny  \\\nKod stacji                                                       \n149180020      CHAŁUPKI            Odra (1)               2018   \n149180020      CHAŁUPKI            Odra (1)               2018   \n149180020      CHAŁUPKI            Odra (1)               2018   \n149180020      CHAŁUPKI            Odra (1)               2018   \n149180020      CHAŁUPKI            Odra (1)               2018   \n...                 ...                 ...                ...   \n149190250      JABŁONKA  Piekielnik (82224)               2018   \n149190250      JABŁONKA  Piekielnik (82224)               2018   \n149190250      JABŁONKA  Piekielnik (82224)               2018   \n149190250      JABŁONKA  Piekielnik (82224)               2018   \n149190250      JABŁONKA  Piekielnik (82224)               2018   \n\n            Wskaźnik miesiąca w roku hydrologicznym  Dzień  Stan wody [cm]  \\\nKod stacji                                                                   \n149180020                                        12      1              75   \n149180020                                        12      2              82   \n149180020                                        12      3              85   \n149180020                                        12      4              80   \n149180020                                        12      5              79   \n...                                             ...    ...             ...   \n149190250                                        12     27             141   \n149190250                                        12     28             156   \n149190250                                        12     29             155   \n149190250                                        12     30             149   \n149190250                                        12     31             146   \n\n            Przepływ [m^3/s]  Temperatura wody [st. C]  Miesiąc kalendarzowy  \nKod stacji                                                                    \n149180020               9.13                      99.9                    10  \n149180020              11.60                      99.9                    10  \n149180020              12.80                      99.9                    10  \n149180020              10.90                      99.9                    10  \n149180020              10.60                      99.9                    10  \n...                      ...                       ...                   ...  \n149190250               0.75                      99.9                    10  \n149190250               2.20                      99.9                    10  \n149190250               2.07                      99.9                    10  \n149190250               1.52                      99.9                    10  \n149190250               1.19                      99.9                    10  \n\n[25801 rows x 9 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Nazwa stacji</th>\n      <th>Nazwa rzeki/jeziora</th>\n      <th>Rok hydrologiczny</th>\n      <th>Wskaźnik miesiąca w roku hydrologicznym</th>\n      <th>Dzień</th>\n      <th>Stan wody [cm]</th>\n      <th>Przepływ [m^3/s]</th>\n      <th>Temperatura wody [st. C]</th>\n      <th>Miesiąc kalendarzowy</th>\n    </tr>\n    <tr>\n      <th>Kod stacji</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>149180020</th>\n      <td>CHAŁUPKI</td>\n      <td>Odra (1)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>1</td>\n      <td>75</td>\n      <td>9.13</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>149180020</th>\n      <td>CHAŁUPKI</td>\n      <td>Odra (1)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>2</td>\n      <td>82</td>\n      <td>11.60</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>149180020</th>\n      <td>CHAŁUPKI</td>\n      <td>Odra (1)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>3</td>\n      <td>85</td>\n      <td>12.80</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>149180020</th>\n      <td>CHAŁUPKI</td>\n      <td>Odra (1)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>4</td>\n      <td>80</td>\n      <td>10.90</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>149180020</th>\n      <td>CHAŁUPKI</td>\n      <td>Odra (1)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>5</td>\n      <td>79</td>\n      <td>10.60</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>149190250</th>\n      <td>JABŁONKA</td>\n      <td>Piekielnik (82224)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>27</td>\n      <td>141</td>\n      <td>0.75</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>149190250</th>\n      <td>JABŁONKA</td>\n      <td>Piekielnik (82224)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>28</td>\n      <td>156</td>\n      <td>2.20</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>149190250</th>\n      <td>JABŁONKA</td>\n      <td>Piekielnik (82224)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>29</td>\n      <td>155</td>\n      <td>2.07</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>149190250</th>\n      <td>JABŁONKA</td>\n      <td>Piekielnik (82224)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>30</td>\n      <td>149</td>\n      <td>1.52</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>149190250</th>\n      <td>JABŁONKA</td>\n      <td>Piekielnik (82224)</td>\n      <td>2018</td>\n      <td>12</td>\n      <td>31</td>\n      <td>146</td>\n      <td>1.19</td>\n      <td>99.9</td>\n      <td>10</td>\n    </tr>\n  </tbody>\n</table>\n<p>25801 rows × 9 columns</p>\n</div>"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "DataFrame.__init__() got an unexpected keyword argument 'names'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [10]\u001B[0m, in \u001B[0;36m<cell line: 14>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      1\u001B[0m start_time \u001B[38;5;241m=\u001B[39m time\u001B[38;5;241m.\u001B[39mtime()\n\u001B[1;32m      2\u001B[0m codz_names \u001B[38;5;241m=\u001B[39m (\n\u001B[1;32m      3\u001B[0m                 \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mKod stacji\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[1;32m      4\u001B[0m                 \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mNazwa stacji\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     12\u001B[0m                 \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mMiesiąc kalendarzowy\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[1;32m     13\u001B[0m             )\n\u001B[0;32m---> 14\u001B[0m KRK_BIELANY \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mDataFrame\u001B[49m\u001B[43m(\u001B[49m\u001B[43mnames\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mcodz_names\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     15\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m file \u001B[38;5;129;01min\u001B[39;00m unpack(zip_files):\n\u001B[1;32m     16\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/codz_\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;129;01min\u001B[39;00m file:\n",
+      "\u001B[0;31mTypeError\u001B[0m: DataFrame.__init__() got an unexpected keyword argument 'names'"
+     ]
     }
    ],
    "source": [
-    "for file in unpack(zip_files):\n",
-    "\n",
-    "    if '\\\\codz_' in file:\n",
-    "        df = pd.read_csv(\n",
-    "            file,\n",
-    "            encoding='windows-1250',\n",
-    "            index_col='Kod stacji',\n",
-    "            names=(\n",
+    "start_time = time.time()\n",
+    "codz_names = (\n",
     "                'Kod stacji',\n",
     "                'Nazwa stacji',\n",
     "                'Nazwa rzeki/jeziora',\n",
@@ -161,53 +134,49 @@
     "                'Przepływ [m^3/s]',\n",
     "                'Temperatura wody [st. C]',\n",
     "                'Miesiąc kalendarzowy'\n",
-    "            )\n",
+    ")\n",
+    "\n",
+    "zjaw_names = (\n",
+    "            'Kod stacji',\n",
+    "            'Nazwa stacji',\n",
+    "            'Nazwa rzeki/jeziora',\n",
+    "            'Rok hydrologiczny',\n",
+    "            'Wskaźnik miesiąca w roku hydrologicznym',\n",
+    "            'Dzień',\n",
+    "            'Grubość lodu [cm]',\n",
+    "            'Kod zjawiska lodowego',\n",
+    "            'Procent udziału zjawiska lodowego / 10',\n",
+    "            'Kod zarastania'\n",
+    ")\n",
+    "\n",
+    "for file in unpack(zip_files):\n",
+    "    if '/codz_' in file:\n",
+    "        df = pd.read_csv(\n",
+    "            file,\n",
+    "            encoding='windows-1250',\n",
+    "            index_col='Kod stacji',\n",
+    "            names=codz_names\n",
     "        )\n",
-    "        # for i in df['Stan wody [cm]']:\n",
-    "        #     if i == 999:\n",
-    "        #         df['Stan wody [cm]'][i] = 'null'\n",
-    "        # for i in df['Przepływ [m^3/s]']:\n",
-    "        #     if i == 99999.999:\n",
-    "        #         df['Przepływ [m^3/s]'][i] = 'null'\n",
-    "        for i in df['Temperatura wody [st. C]']:\n",
-    "            if i == 99.9:\n",
-    "                # df['Temperatura wody [st. C]'][i] = 'null'\n",
-    "                i = 'NaN'\n",
     "\n",
-    "# df['Temperatura wody [st. C]'].dtype\n",
-    "df\n",
+    "        krk_bielany = df[df['Nazwa stacji'] == 'KRAKÓW-BIELANY']\n",
+    "        df_list += krk_bielany\n",
     "\n",
-    "# elif '\\\\zjaw_' in file:\n",
+    "# value 9999 in df['Stan wody'] = NaN\n",
+    "# value 99.9 in df['Temperatura wody [st. C]'] = NaN\n",
+    "# value 99999.999 in df['Przepływ [m^3/s]'] = NaN\n",
+    "\n",
+    "KRK_BIELANY = pd.concat(krk_bielany, ignore_index=True, sort=False)\n",
+    "\n",
+    "# elif '/zjaw_' in file:\n",
     "#     df = pd.read_csv(\n",
     "#         file,\n",
     "#         encoding='windows-1250',\n",
     "#         index_col='Kod stacji',\n",
-    "#         names=(\n",
-    "#             'Kod stacji',\n",
-    "#             'Nazwa stacji',\n",
-    "#             'Nazwa rzeki/jeziora',\n",
-    "#             'Rok hydrologiczny',\n",
-    "#             'Wskaźnik miesiąca w roku hydrologicznym',\n",
-    "#             'Dzień',\n",
-    "#             'Grubość lodu [cm]',\n",
-    "#             'Kod zjawiska lodowego',\n",
-    "#             'Procent udziału zjawiska lodowego / 10',\n",
-    "#             'Kod zarastania'\n",
-    "#         )\n",
-    "#     )"
+    "#         names=zjaw_names\n",
+    "#     )\n",
+    "\n",
+    "print(f'execution time: {time.time() - start_time} s')"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
